--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@
 }
 
 .default{
-  display:default!important;
+  display:inherit!important;
 }
 
 
@@ -89,18 +89,27 @@
 
 
 .lds-facebook {
-  display: inline-block;
+  display: flex;
   position: relative;
-  width: 80px;
-  height: 80px;
+  width: 80px!important;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+
 }
 .lds-facebook div {
-  display: inline-block;
-  position: absolute;
+  /* display: flex !important; */
+  position: relative;
+  flex: 100%;
   left: 8px;
   width: 16px;
-  background: rgb(44, 115, 182);
-  animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
+  background: #2c73b6;
+  -webkit-animation: lds-facebook 1.2s cubic-bezier(0,.5,.5,1) infinite;
+  animation: lds-facebook 1.2s cubic-bezier(0,.5,.5,1) infinite;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
 }
 .lds-facebook div:nth-child(1) {
   left: 8px;
