--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,8 @@
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 794px;
 }
 
 .hidden{
@@ -82,7 +84,7 @@
 
 
 .comment{
-  width: 47em;
+  width: 100%;
   height: 20em;
   overflow: auto;
 }
